   tweaks for exposure events and multi-wrapped lines.
 - Removed buggy numeric 338 support [783945].
 - Nick completion in dialogs and channel completion (Jay Cornwall).
 - Print informative error messages when dcc resume isn't possible.
 - Speed up dcc recv, send and chat windows.
 - Fixed tab-arrow buttons show/hide (Lloyd Williams) [783681].
 - Fixed lastlog bugs.
 - win32: Faster tinting, and use MMX when in 16 or 32bit color.
 - 
 - 


----------------------------------------------------------------------
 2.0.4
----------------------------------------------------------------------

 - Updated translations (lt, sv, zh_CN).
 - Fixed crash on tinted transparency (xc203-fixtint.diff).
 - Fixed incorrect dcc cps calculation (xc203-fix-cps.diff).
 - Allow fullpath and relative filenames for Text Events sound files
   (Anthony Dragunov).
 - Added /GUI command (mainly for use by scripts).
 - Solaris build fixes for ipv6.
 - Added -n, --no-plugins command-line arg.
 - Added a feature to change the color of away users.
 - Moved default dcc and sound dirs inside ~/.xchat2/ (SilvereX).
 - Fixed bug [753742] When server tab and query had the same name,
   private messages could go to the wrong tab.
 - Support others users too, when expanding ~ in filenames (Neox).
   [767514].
 - Underline "ipnumber:port" style urls too (Alex & dobler).
 - Added support for ircu numerics 330 and 338 (phaseburn).
 - C89 fixes, should now compile with HP UX and Sun C Compilers
   (Albert Chin). [777106].
 - Smaller bug fixes: [773245] [779166].
 - Close tabs on shift-leftclick (Jay Cornwall).


----------------------------------------------------------------------
 2.0.3
----------------------------------------------------------------------

 - Updated translations (ca, fr, ja, sv).
 - Fixed URL grabber not filling up (xc202-fixurlg.diff).
 - Fixed crash when holding down Ctrl-I (xc202-fixdetach.diff).
 - Use Shift-Ctrl-W for Close only when Emacs key theme is enabled.